--- a/jquery/latihan3.html
+++ b/jquery/latihan3.html
@@ -17,7 +17,7 @@
 
 	<button>fade in/out boxes</button><br><br>
 
-	<div id="div1" style="width: 80px;height: 80px;border-color: red;"></div>
+	<div id="div1" style="width: 80px;height: 80px;background-color: red;"></div>
 		<br>
 		<div id="div2" style="width: 80px;height: 80px;background-color: green;"></div>
 		<br>
